--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,3 +12,9 @@
     display: flex;
     flex-direction: column;
  }
+
+ #start {
+    text-align: center;
+    font-size: 30px;
+    margin-top: 20%;
+}
