--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,20 +29,21 @@ body {
 }
 
 main {
-    width: 80%;
+    width: 60%;
     margin: 60px auto;
     text-align: center;
     justify-content: center;
     display: none;
 }
 
-h1, h2 {
+h1 {
     margin: 10px 0;
 }
 
 #answer-buttons {
     display: flex;
     flex-direction: column;
+    margin-top: 20px;
 }
 
 .btn {
@@ -108,6 +109,10 @@ footer a {
 
     #start {
         font-size: 20px;
+    }
+
+    main {
+        width: 80%;
     }
 
     .btn {
