--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600&display=swap');
 
 /* Site wide */
+html {
+    height: 100%;
+}
 * {
     font-family: lora, sans-serif;
     background-color: black;
@@ -11,7 +14,7 @@
 }
 
 body {
-    min-height: 100vh;
+    min-height: 100%;
     display: flex;
     flex-direction: column;
 }
