--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,16 +23,67 @@ body {
 
 #start {
     text-align: center;
-    font-size: 30px;
-    margin: auto 20px;
+    margin: auto 3%;
     letter-spacing: 2px;
+    justify-content: center;
 }
 
 #start-btn {
-    margin: 50px 0 0;
-    padding: 15px 20px;
+    margin: 20px 0 0;
+    padding: 10px 20px;
     font-size: 25px;
+    border: 2px ridge #fff;
+    margin-bottom: 1em;
 }
+
+.heading {
+    font-size: 30px;
+    padding-bottom: 0.5em;
+}
+
+.diff {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 3em;
+
+}
+
+#level {
+    width: 5rem;
+    margin: 5px;
+}
+
+/* Modal */
+
+#myBtn {
+    border-radius: 5px;
+    /* padding: 5px 10px;
+    font-size: 17px; */
+    color: #FECC02;
+    border: 1px solid #FECC02;
+    
+}
+
+.modal {
+    display: none; 
+    position: fixed;
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%; 
+    overflow: auto;
+}
+
+.modal-content {
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #FECC02;
+    width: 50%; 
+    text-align: left;
+}
+
 
 /* The quiz */
 
